fix z-index bugs

--- a/src/App.scss
+++ b/src/App.scss
@@ -50,6 +50,7 @@ strong {
   left: 40px;
   top: 30px;
   display: block;
+  z-index: 99;
   img {
     width: 100%;
     pointer-events: none;
