--- a/src/components/BarChart/index.scss
+++ b/src/components/BarChart/index.scss
@@ -176,7 +176,7 @@
   padding: 1.2rem 0.5rem;
   line-height: 1.6;
   font-size: 16px;
-  z-index: 9999;
+  z-index: 10;
   position: relative;
   @include media(">=phone", "<=tablet") {
     width: 80%;
@@ -186,7 +186,7 @@
 .description {
   margin-left: 0.8rem;
   overflow: auto;
-  z-index: 1000;
+  z-index: 10;
 
   @include media(">=phone", "<=tablet") {
   }
