--- a/src/components/Chart.scss
+++ b/src/components/Chart.scss
@@ -154,7 +154,7 @@
     border: 2px solid black;
     font-size: 16px;
     position: relative;
-    z-index: 1000;
+    z-index: 10;
 
     @include media(">=phone", "<=tablet") {
       width: 80%;
@@ -172,7 +172,7 @@
   .description {
     margin-left: 0.8rem;
     overflow: auto;
-    z-index: 1000;
+    z-index: 10;
 
     @include media(">=phone", "<=tablet") {
       display: grid;
