--- a/src/components/Paragraph.scss
+++ b/src/components/Paragraph.scss
@@ -12,7 +12,7 @@
   &__title,
   &__content {
     max-width: 800px;
-    z-index: 1000;
+    z-index: 5;
   }
 
   &__title {
