--- a/src/components/Questions.scss
+++ b/src/components/Questions.scss
@@ -16,7 +16,7 @@
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    z-index: 1000;
+    z-index: 5;
     @include media(">=phone", "<=tablet") {
       font-size: 1.2em;
       width: 80%;
